--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.home":"C:\\Program Files\\Java\\jdk-17.0.1",
     "maven.terminal.useJavaHome": true,
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "automatic"
 
 }
