--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>jsoup</artifactId>
       <version>1.14.3</version>
     </dependency>
+    <dependency>
+   		 <groupId>org.seleniumhq.selenium</groupId>
+   		 <artifactId>selenium-java</artifactId>
+   		 <version>4.1.0</version>
+   	 </dependency>
   </dependencies>
 
   <build>
